# pointAdvection

./: CONTRIBUTORS.rst  Dockerfile  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-request.yml
doc/: environment.yml
doc/source/: conf.py  index.rst
doc/source/api_reference/: advection.rst  combine_icelines_fronts.rst  mask_ice_fronts.rst  mask_icelines_fronts.rst  time.rst  tools.rst  utilities.rst
doc/source/getting_started/: Citations.rst  Contributing.rst  Install.rst  Resources.rst
doc/source/user_guide/: Examples.rst
notebooks/: Interpolate-Velocities.ipynb  Plot-Velocities.ipynb  make_vel_interpolators_generic.ipynb  test_streams.ipynb
pointAdvection/: __init__.py  advection.py  time.py  tools.py  utilities.py  velocity.py  version.py
pointAdvection/scripts/: combine_icelines_fronts.py
scripts/: combine_icelines_fronts.py  mask_ice_fronts.py  mask_icelines_fronts.py
